# ffmpegrecord

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/xyz/eraise/libyuv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  Arguments.cpp  audio_encoder.cpp  audio_encoder.h  base_include.h  log.cpp  log.h  media_muxer.cpp  media_muxer.h  utils.cpp  utils.h  video_encoder.cpp  video_encoder.h  xyz_eraise_libyuv_utils_NdkBridge.cpp  xyz_eraise_libyuv_utils_YuvUtil.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/xyz/eraise/libyuv/: MainActivity.java
app/src/main/java/xyz/eraise/libyuv/utils/: NdkBridge.java  YuvUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/xyz/eraise/libyuv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
